Sun Jul 12 23:30:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_to_integer, rb_check_to_integer): return Bignum
	  as-is.

Sun Jul 12 21:07:46 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: use k_exact_{zero,one}_p macro.

	* rational.c: ditto.

Sun Jul 12 20:42:58 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (fix_divide): added an entry to rational.

	* rational.c (rb_rational_reciprocal): added.

	* complex.c (f_reciprocal): added.

Sun Jul 12 02:24:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rand_init): use fixed buffer for small numbers.

Sat Jul 11 14:43:34 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_io_m17n.rb (test_strip_bom): added.

Sat Jul 11 07:11:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_attempted_completion_function):
	  array length is long.

	* ext/readline/readline.c (readline_s_get_filename_quote_characters):
	  missing type of self.

Sat Jul 11 02:37:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (limited_rand): expands to long before shift so tha
	  the result does not overflow.

Sat Jul 11 00:16:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (rand_init): got rid of buffer overflow.

Sat Jul 11 00:11:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_join_1): should recurse for element array.

Fri Jul 10 23:10:11 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_strip_bom): ungetbyte third byte when UTF-16LE.

Fri Jul 10 23:04:16 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (io_strip_bom): Fix condition of second byte of
	  UTF-16LE/UTF-32LE.

Fri Jul 10 21:45:30 2009  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/extconf.rb: checked rl_refresh_line in readline.

	* ext/readline/readline.c (readline_s_refresh_line): add new
	  method, a patch from Koichiro Ohba. see [ruby-list:45922].

Fri Jul 10 21:00:05 2009  TAKAO Kouji  <kouji@takao7.net>
